--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -41,9 +41,15 @@
    background: #CACAE8;
    }
 
+.container {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}   
+   
 .setUpCard{
 	background: #CACAE8;
-	width: 1300px; border: 2px solid;
+	width: 500px; border: 2px solid;
 	border-width: 6px; border-radius: 30px;
 	box-shadow: 10px 10px 5px #CCCCCC;
 	border-color: #FFFFFF;
@@ -56,7 +62,7 @@
 
 .teamCard{
 	background: #CACAE8;
-	width: 600px; border: 2px solid;
+	width: 350px; border: 2px solid;
 	border-width: 6px; border-radius: 30px;
 	box-shadow: 10px 10px 5px #CCCCCC;
 	border-color: #FFFFFF;
