--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -1,5 +1,183 @@
+/*start of CSS code from landing page*/
+body,
+html {
+    width: 100%;
+    height: 100%;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+}
+
+.topnav {
+    font-size: 14px; 
+}
+
+.lead {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.intro-header {
+    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 50px;
+    text-align: center;
+    color: #f8f8f8; /*originally f8f8f8*/
+    background: url(../resources/img/intro-bg.jpg) no-repeat center center;
+    background-size: cover;
+}
+
+.intro-message {
+    position: relative;
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+
+.intro-message > h1 {
+    margin: 0;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 5em;
+}
+
+.intro-divider {
+    width: 400px;
+    border-top: 1px solid #f8f8f8;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.intro-message > h3 {
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+}
+
+@media(max-width:767px) {
+    .intro-message {
+        padding-bottom: 15%;
+    }
+
+    .intro-message > h1 {
+        font-size: 3em;
+    }
+
+    ul.intro-social-buttons > li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.intro-social-buttons > li:last-child {
+        margin-bottom: 0;
+    }
+
+    .intro-divider {
+        width: 100%;
+    }
+}
+
+.network-name {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+
+.content-section-a {
+    padding: 50px 0;
+    background-color: #f8f8f8;
+}
+
+.content-section-b {
+    padding: 50px 0;
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
+}
+
+.section-heading {
+    margin-bottom: 30px;
+}
+
+.section-heading-spacer {
+    float: left;
+    width: 200px;
+    border-top: 3px solid #e7e7e7;
+}
+
+
+.banner {
+    padding: 100px 0;
+    color: #f8f8f8;
+    background: url(../resources/img/banner-bg.jpg) no-repeat center center;
+    background-size: cover;
+}
+
+.banner h2 {
+    margin: 0;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 3em;
+}
+
+.banner ul {
+    margin-bottom: 0;
+}
+
+.banner-social-buttons {
+    float: right;
+    margin-top: 0;
+}
+
+@media(max-width:1199px) {
+    ul.banner-social-buttons {
+        float: left;
+        margin-top: 15px;
+    }
+}
+
+@media(max-width:767px) {
+    .banner h2 {
+        margin: 0;
+        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+        font-size: 3em;
+    }
+
+    ul.banner-social-buttons > li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.banner-social-buttons > li:last-child {
+        margin-bottom: 0;
+    }
+}
+
+footer {
+    padding: 50px 0;
+    background-color: #f8f8f8;
+}
+
+p.copyright {
+    margin: 15px 0 0;
+}
+
+.carousel-inner{
+	width:100%;
+	max-height: 500px !important;
+}
+
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
+
+/*end of CSS code from landing page*/
+
 .page-title{
-	font-family: Times;
+	/*font-family: Times;*/
 	text-align: center;
 	}
 
@@ -27,7 +205,7 @@
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: #262626;
    font-size: 13px;
-   font-family: Helvetica, Arial, Sans-Serif;
+   /*font-family: Helvetica, Arial, Sans-Serif;*/
    text-decoration: none;
    vertical-align: middle;
    }
@@ -53,13 +231,7 @@ form.setUpCard{
 table.setTeamCard{
 	margin: 0 auto;
 }
-
-.container {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}   
-   
+     
 .setUpCard{
 	background: #CACAE8;
 	width: 500px; border: 2px solid;
@@ -68,7 +240,7 @@ table.setTeamCard{
 	border-color: #FFFFFF;
 	padding: 12px 12px;
 	margin: 30px 30px;
-	font-family: Helvetica, Arial, Serif;
+	/*font-family: Helvetica, Arial, Serif;*/
 	font-size: 15pt;
 	text-align: center;
 }
@@ -81,13 +253,13 @@ table.setTeamCard{
 	border-color: #FFFFFF;
 	padding: 12px 12px;
 	margin: 30px 30px;
-	font-family: Helvetica, Arial, Serif;
+	/*font-family: Helvetica, Arial, Serif;*/
 	font-size: 12pt;
 }
 
 .errorMessage{
 	color: red;
-	font-family: Helvetica, Arial, Serif;
+	/*font-family: Helvetica, Arial, Serif;*/
 	padding: 15px 0px;
 	font-size: 10pt;
 }
@@ -95,7 +267,7 @@ table.setTeamCard{
 
 .statusMessage{
 	color: black;
-	font-family: Helvetica, Arial, Serif;
+	/*font-family: Helvetica, Arial, Serif;*/
 	padding: 15px 10px 10px 10px;
 	font-size: 11pt;
 }
