--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -105,7 +105,6 @@ h6 {
 .section-heading-spacer {
     float: left;
     width: 200px;
-    border-top: 3px solid #e7e7e7;
 }
 
 
@@ -174,19 +173,14 @@ p.copyright {
     margin: 0 auto;
 }
 
+
 /*end of CSS code from landing page*/
 
 .page-title{
-	/*font-family: Times;*/
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 	text-align: center;
 	}
 
-.logo{
-	position:absolute;
-    left:0px;
-    bottom:0px
-	}		
-		
 .button {
    border-top: 1px solid #ffffff;
    background: #CACAE8;
@@ -205,7 +199,7 @@ p.copyright {
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: #262626;
    font-size: 13px;
-   /*font-family: Helvetica, Arial, Sans-Serif;*/
+   font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
    text-decoration: none;
    vertical-align: middle;
    }
@@ -233,33 +227,31 @@ table.setTeamCard{
 }
      
 .setUpCard{
-	background: #CACAE8;
+	background: #b6b6b6;
 	width: 500px; border: 2px solid;
 	border-width: 6px; border-radius: 30px;
-	box-shadow: 10px 10px 5px #CCCCCC;
 	border-color: #FFFFFF;
 	padding: 12px 12px;
 	margin: 30px 30px;
-	/*font-family: Helvetica, Arial, Serif;*/
 	font-size: 15pt;
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 	text-align: center;
 }
 
 .teamCard{
-	background: #CACAE7;
+	background: #b6b6b6;
 	width: 350px; border: 2px solid;
 	border-width: 6px; border-radius: 30px;
-	box-shadow: 10px 10px 5px #CCCCCC;
 	border-color: #FFFFFF;
 	padding: 12px 12px;
 	margin: 30px 30px;
-	/*font-family: Helvetica, Arial, Serif;*/
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 12pt;
 }
 
 .errorMessage{
 	color: red;
-	/*font-family: Helvetica, Arial, Serif;*/
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 	padding: 15px 0px;
 	font-size: 10pt;
 }
@@ -267,7 +259,7 @@ table.setTeamCard{
 
 .statusMessage{
 	color: black;
-	/*font-family: Helvetica, Arial, Serif;*/
+	font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
 	padding: 15px 10px 10px 10px;
 	font-size: 11pt;
 }
