--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -218,7 +218,7 @@ input[type="button"]{
 	margin: 0 auto; 
 }
 
-form.setUpCard{
+form.setUpCard{ /*causing an issue with spacing and centering of text within cards I think*/
 	margin: 0 auto;
 }
 
