--- a/templates/screen6.html
+++ b/templates/screen6.html
@@ -1,17 +1,16 @@
 <h1 align="center">Final Results</h1>
-<div ng-init="getWinners()">
-<tr ng-repeat="team in this.winners">
-		<td>
-			<form id="resultsFormP" class="teamCard">
-				<div id="teamCard" >
-					<b>Team Name:</b> {{team.name}} <br>
-					<b>Team Number:</b> {{team.uniqueID}} <br>
-					<b>Team Record:</b> {{team.record}} <br>
-					<b>Team CS:</b> {{team.combinedStr}} <br>
-					<b>Team PD:</b> {{team.pointDiff}} <br>
-				</div>
-			</form>
-		</td>
-	<td>
-</tr>
-</div>
+	<div ng-init="getWinners()">
+		<tr ng-repeat="team in this.sortedTeams">
+			<td>
+				<form id="resultsFormP" class="teamCard">
+					<div id="teamCard" >
+						<b>Team Name:</b> {{team.name}} <br>
+						<b>Team Number:</b> {{team.uniqueID}} <br>
+						<b>Team Record:</b> {{team.record}} <br>
+						<b>Team CS:</b> {{team.combinedStr}} <br>
+						<b>Team PD:</b> {{team.pointDiff}} <br>
+					</div>
+				</form>
+			</td>
+		</tr>
+	</div>
