--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -95,7 +95,6 @@ h6 {
 .content-section-b {
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
 }
 
 .section-heading {
@@ -164,16 +163,6 @@ p.copyright {
     margin: 15px 0 0;
 }
 
-.carousel-inner{
-	width:100%;
-	max-height: 500px !important;
-}
-
-.carousel-inner > .item > img {
-    margin: 0 auto;
-}
-
-
 /*end of CSS code from landing page*/
 
 .page-title{
@@ -225,7 +214,12 @@ form.setUpCard{ /*causing an issue with spacing and centering of text within car
 table.setTeamCard{
 	margin: 0 auto;
 }
-     
+
+.mainView{
+	min-height: 72%;
+	margin: 30px 0px; 
+}
+
 .setUpCard{
 	background: #F4F4F4;
 	width: 500px; border: 2px solid;
