--- a/templates/screen1.html
+++ b/templates/screen1.html
@@ -1,16 +1,13 @@
 	<!-- Header -->
-    <a name="about"></a>
-    <div class="intro-header" background="resources/img/intro-bg.jpg">
-		<div class="intro-message">
-			<h1>TrialTracker</h1>
-			<h3>A Tabulation App</h3> 
-			<hr class="intro-divider">
-			<ul class="list-inline intro-social-buttons">
-				<li>
-					<a ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
-				</li>
-			</ul>
-		</div>
+    <div class="intro-header intro-message" background="resources/img/intro-bg.jpg">
+		<h1>TrialTracker</h1>
+		<h3>A Tabulation App</h3> 
+		<hr class="intro-divider">
+		<ul class="list-inline intro-social-buttons">
+			<li>
+				<a ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
+			</li>
+		</ul>
     </div>
     <!-- /.intro-header -->
 	
@@ -18,7 +15,6 @@
     <div class="content-section-a">
         <div class="container">
 			<div class="col-lg-5 col-sm-6">
-				
 				<h2 class="section-heading">Let us tabulate for you</h2>
 				<p class="lead">TrialTracker is a convenient way to pair teams, adhering to the rules/tabulation manual set by American Mock Trial Association.</p>
 			</div>
@@ -47,19 +43,3 @@
         <!-- /.container -->
     </div>
     <!-- /.content-section-b -->
-	
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li> <a href="#">Home</a> </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li> <a href="#about">About</a> </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Team CAGE 2014. All Rights Reserved</p>
-                </div>
-            </div>
-        </div>
-    </footer>
