Took out unused CSS and added credit for using landing page template.

--- a/templates/screen1.html
+++ b/templates/screen1.html
@@ -1,3 +1,5 @@
+	<!--Modified landing page template: http://startbootstrap.com/template-overviews/landing-page/-->
+	
 	<!-- Header -->
     <div class="intro-header intro-message" background="resources/img/intro-bg.jpg">
 		<h1>TrialTracker</h1>
@@ -10,8 +12,7 @@
 		</ul>
     </div>
     <!-- /.intro-header -->
-	
-	<!--Current stuff-->
+
     <div class="content-section-a">
         <div class="container">
 			<div class="col-lg-5 col-sm-6">
