--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -9,8 +9,7 @@
 		<form name="setUpForm" class="setUpCard">
 			Tournament Name: <input type="text" id="tourName" placeholder="ex. Party Like a Mock Star 2090" required><br><br>
 			Total Teams: <input type="number" id="totalTeams" placeholder="ex. 20" required><br><br>
-			<input type="button" value="Submit" id="submit_button" class="button" ui-sref="screen3" ng-click="initTour()">
-			<button ng-disabled="setUpForm.$invalid">Test</button>
+			<input type="button" value="Submit" id="submit_button" class="button" ui-sref="screen3" ng-disabled="setUpForm.$invalid" ng-click="initTour()">
 			<br>
 			<div id="errorMessage" class="errorMessage"></div>
 		</form>
