--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -153,6 +153,12 @@ p.copyright {
    border-top-color: #f5d42e;
    background: #E4E4F4;
    }
+.button:disabled {
+   border-top-color: #EEEEEE;
+   background: #EEEEEE;
+   color: #DDDDDD;
+   box-shadow: none;   
+   }
    
 input[type="button"]{
 	display: block;
