--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -4,7 +4,8 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>
-		
+	
+	<!--	
 	<div id="settingUp">
 		<form name="setUpForm" class="setUpCard">
 			Tournament Name: <input type="text" id="tourName" placeholder="ex. Party Like a Mock Star 2090" required><br><br>
@@ -14,24 +15,25 @@
 			<div id="errorMessage" class="errorMessage"></div>
 		</form>
 	</div>
+	-->
 	
-	<!--
+	
 	<div id="settingUp">
 		<form name="setUpForm" class="setUpCard form-horizontal">
 			<div class="form-group">
-				<label for="TournamentName" class="col-sm-2"> Tournament Name </label>
-				<div class="col-sm-6">
-					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" /><br>
+				<label for="TournamentName" class="col-sm-5"> Tournament Name </label>
+				<div class="col-sm-4">
+					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" /><br>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="TotalTeams" class="col-sm-2"> Total Teams </label>
-				<div class="col-sm-6">
-					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" ><br>
+				<label for="TotalTeams" class="col-sm-5">   Total Teams </label>
+				<div class="col-sm-4">
+					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" ><br>
 				</div>
 			</div>
 			<input type="button" value="Submit" id="submit_button" class="button" ui-sref="screen3" ng-click="initTour()">
 		</form>
 	</div>
-	-->
+	
 	
