--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -23,16 +23,16 @@
 			<div class="form-group">
 				<label for="TournamentName" class="col-sm-5"> Tournament Name </label>
 				<div class="col-sm-4">
-					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" /><br>
+					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" />
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="TotalTeams" class="col-sm-5">   Total Teams </label>
+				<label for="TotalTeams" class="col-sm-5"> Total Teams </label>
 				<div class="col-sm-4">
-					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" ><br>
+					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" >
 				</div>
 			</div>
-			<input type="button" value="Submit" id="submit_button" class="button" ui-sref="screen3" ng-click="initTour()">
+			<input type="button" value="Submit" id="submit_button" class="btn btn-default" ui-sref="screen3" ng-click="initTour()">
 		</form>
 	</div>
 	
