--- a/resources/TrackYourTrials.css
+++ b/resources/TrackYourTrials.css
@@ -192,9 +192,9 @@ table.setTeamCard{
 }
 
 .teamCard{
-	background: #FFFFFF;
+	background: #F4F4F4;
 	width: 350px; border: 2px solid;
-	border-width: 6px; 
+	border-width: 6px; border-radius: 30px;
 	border-color: #FFFFFF;
 	padding: 12px 12px;
 	margin: 30px 30px;
@@ -202,7 +202,7 @@ table.setTeamCard{
 	
 }
 
-.teamCard input, textarea {
+/*.teamCard input, textarea {
 	width:150px;
 	background: #FFFFFF;
 	border-color: #000000;
@@ -215,7 +215,7 @@ table.setTeamCard{
 	color: #FFFFFF;
 	padding: 3px 3px 3px 3px;
 	width: 100px;
-}
+} */
 
 .errorMessage{
 	color: red;
