--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -4,35 +4,23 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>
-	
-	<!--	
-	<div id="settingUp">
-		<form name="setUpForm" class="setUpCard">
-			Tournament Name: <input type="text" id="tourName" placeholder="ex. Party Like a Mock Star 2090" ng-model="text" required><br><br>
-			Total Teams: <input type="number" id="totalTeams" placeholder="ex. 20" ng-model="number" required><br><br>
-			<button ng-disabled="setUpForm.$invalid" name="name" ng-click="initTour()" ui-sref="screen3" class="button" id="submit_button">Submit</button>
-			<br>
-			<div id="errorMessage" class="errorMessage"></div>
-		</form>
-	</div>
-	-->
-	
-	
+		
 	<div id="settingUp">
 		<form name="setUpForm" class="setUpCard form-horizontal">
 			<div class="form-group">
 				<label for="TournamentName" class="col-sm-5"> Tournament Name </label>
 				<div class="col-sm-4">
-					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" />
+					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" ng-model="text" required />
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="TotalTeams" class="col-sm-5"> Total Teams </label>
 				<div class="col-sm-4">
-					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" >
+					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" ng-model="number" required >
 				</div>
 			</div>
-			<input type="button" value="Submit" id="submit_button" class="btn btn-default" ui-sref="screen3" ng-click="initTour()">
+			<center><button ng-disabled="setUpForm.$invalid" name="name" ng-click="initTour()" ui-sref="screen3" class="btn btn-default" id="submit_button">Submit</button></center>
+			<!--<input type="button" value="Submit" id="submit_button" class="btn btn-default" ui-sref="screen3" ng-click="initTour()">-->
 		</form>
 	</div>
 	
