--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -12,18 +12,18 @@
 					<td>
 						<form id="teamCardFormP" class="teamCard form-horizontal">
 							<div class="form-group">
-								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.pTeam.number+1}} </label> 
+								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.pTeam.rank+1}} </label> 
 							</div>
 							<div id="teamCard" class="form-group">
 								<label for="TeamName" class="col-sm-4 control-label"> Team Name: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamName{{pair.pTeam.number}}" ng-model = "pair.pTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control"></input>
+									<input type="text" id="teamName{{pair.pTeam.rank}}" ng-model = "pair.pTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control"></input>
 								</div>
 							</div>
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-4 control-label"> Team ID: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamID{{pair.pTeam.number}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 99999" class="form-control"></input>
+									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 99999" class="form-control"></input>
 								</div>
 							</div>
 						</form>
@@ -31,18 +31,18 @@
 					<td >
 						<form id="teamCardFormD" class="teamCard form-horizontal">
 							<div class="form-group">
-								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.dTeam.number+1}} </label> 
+								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.dTeam.rank+1}} </label> 
 							</div>
 							<div id="teamCard" class="form-group">
 								<label for="TeamName" class="col-sm-4 control-label"> Team Name: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamName{{pair.pTeam.number}}" ng-model = "pair.dTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control"></input>
+									<input type="text" id="teamName{{pair.pTeam.rank}}" ng-model = "pair.dTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control"></input>
 								</div>
 							</div>
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-4 control-label"> Team ID: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamID{{pair.pTeam.number}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 99999" class="form-control"></input>
+									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 99999" class="form-control"></input>
 								</div>
 							</div>
 						</form>
