--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -60,7 +60,7 @@
 			</tbody>
 		</table>
 		<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button">
-		<button class="button" ng-disabled="teamCardFormD.$invalid || teamCardFormP.$invalid" ng-click = "startR1()" ui-sref="screen4">Start Round 1</button>
+		<!--<button class="button" ng-disabled="teamCardFormD.$invalid || teamCardFormP.$invalid" ng-click = "startR1()" ui-sref="screen4">Start Round 1</button>-->
 		<br></br>
 		</form>
 	</div>
