failed attempts to fix screen 6

--- a/templates/screen6.html
+++ b/templates/screen6.html
@@ -1,6 +1,6 @@
 <h1 align="center">Final Results</h1>
 	<div ng-init="getWinners()">
-		<tr ng-repeat="team in this.sortedTeams">
+		<tr ng-repeat="team in this.finalTeams">
 			<td>
 				<form id="resultsFormP" class="teamCard">
 					<div id="teamCard" >
