--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -1,6 +1,7 @@
 <h1 align="center">{{name}}</h1>
 <h3 align="center">Enter Team Information for Round {{round}} Pairings...</h3>
 	<div id="enterTeams" ng-init = "configTeams()" class="cardTableTop">
+		<form name="teamCards">
 			<table cellspacing="0" cellpadding="0" id="teamSetUpTable" class="setTeamCard">
 				<colgroup span="2"></colgroup>
 				<tbody>
@@ -10,42 +11,42 @@
 					</tr>
 					<tr ng-repeat="pair in pairings"> <!--Don't have ID attributes in repeat-->
 					<td>
-						<form id="teamCardFormP" class="teamCard form-horizontal">
+						<div id="teamCardFormP" class="teamCard form-horizontal">
 							<div class="form-group">
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.pTeam.rank+1}} </label> 
 							</div>
 							<div id="teamCard" class="form-group">
 								<label for="TeamName" class="col-sm-4 control-label"> Team Name: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamName{{pair.pTeam.rank}}" ng-model = "pair.pTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control"></input>
+									<input type="text" id="teamName{{pair.pTeam.rank}}" ng-model = "pair.pTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-4 control-label"> Team ID: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 99999" class="form-control"></input>
+									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 99999" class="form-control" required></input>
 								</div>
 							</div>
-						</form>
+						</div>
 					</td>
 					<td >
-						<form id="teamCardFormD" class="teamCard form-horizontal">
+						<div id="teamCardFormD" class="teamCard form-horizontal">
 							<div class="form-group">
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.dTeam.rank+1}} </label> 
 							</div>
 							<div id="teamCard" class="form-group">
 								<label for="TeamName" class="col-sm-4 control-label"> Team Name: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamName{{pair.dTeam.rank}}" ng-model = "pair.dTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control"></input>
+									<input type="text" id="teamName{{pair.dTeam.rank}}" ng-model = "pair.dTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-4 control-label"> Team ID: </label>
 								<div class="col-sm-4">
-									<input type="text" id="teamID{{pair.dTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 99999" class="form-control"></input>
+									<input type="text" id="teamID{{pair.dTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 99999" class="form-control" required></input>
 								</div>
 							</div>
-						</form>
+						</div>
 					<!--
 						<form id="teamCardFormD" class="teamCard">
 							<div id="teamCard">
@@ -59,7 +60,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button">
+		<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button" ng-disabled="teamCards.$invalid"><br><br>
 		<!--<button class="button" ng-disabled="teamCardFormD.$invalid || teamCardFormP.$invalid" ng-click = "startR1()" ui-sref="screen4">Start Round 1</button>-->
 		<br></br>
 		</form>
