--- a/templates/screen6.html
+++ b/templates/screen6.html
@@ -1,16 +1,21 @@
 <h1 align="center">Final Results</h1>
 	<div ng-init="getWinners()">
-		<tr ng-repeat="team in this.finalTeams">
-			<td>
-				<form id="resultsFormP" class="teamCard">
-					<div id="teamCard" >
-						<b>Team Name:</b> {{team.name}} <br>
-						<b>Team Number:</b> {{team.uniqueID}} <br>
-						<b>Team Record:</b> {{team.record}} <br>
-						<b>Team CS:</b> {{team.combinedStr}} <br>
-						<b>Team PD:</b> {{team.pointDiff}} <br>
-					</div>
-				</form>
-			</td>
-		</tr>
+		<table cellspacing="0" cellpadding="0" class="setTeamCard">
+			<tbody>
+				<tr ng-repeat="winner in this.finalTeams">
+					<td >
+						<form class="teamCard">
+							<div id="teamCard" >
+								<b>Final Rank:</b> {{winner.rank}} <br>
+								<b>Team Name:</b> {{winner.name}} <br>
+								<b>Team Number:</b> {{winner.uniqueID}} <br>
+								<b>Team Record:</b> {{winner.record}} <br>
+								<b>Team CS:</b> {{winner.combinedStr}} <br>
+								<b>Team PD:</b> {{winner.pointDiff}} <br>
+							</div>
+						</form>
+					</td>
+				</tr>	
+			</tbody>		
+		</table>
 	</div>
