--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -9,13 +9,13 @@
 		<form name="setUpForm" class="setUpCard form-horizontal">
 			<div class="form-group">
 				<label for="TournamentName" class="col-sm-5"> Tournament Name </label>
-				<div class="col-sm-4">
+				<div class="col-sm-4 col-xs-9">
 					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" ng-model="text" required />
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="TotalTeams" class="col-sm-5"> Total Teams </label>
-				<div class="col-sm-4">
+				<label for="TotalTeams" class="col-sm-5"> Total Teams </label> 
+				<div class="col-sm-4 col-xs-9">
 					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" ng-model="number" required >
 				</div>
 			</div>
