--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -17,13 +17,13 @@
 							</div>
 							<div id="teamCard" class="form-group">
 								<label for="TeamName" class="col-sm-4 control-label"> Team Name: </label>
-								<div class="col-sm-4">
+								<div class="col-sm-4 col-xs-8">
 									<input type="text" id="teamName{{pair.pTeam.rank}}" ng-model = "pair.pTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-4 control-label"> Team ID: </label>
-								<div class="col-sm-4">
+								<div class="col-sm-4 col-xs-8">
 									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 99999" class="form-control" required></input>
 								</div>
 							</div>
@@ -36,13 +36,13 @@
 							</div>
 							<div id="teamCard" class="form-group">
 								<label for="TeamName" class="col-sm-4 control-label"> Team Name: </label>
-								<div class="col-sm-4">
+								<div class="col-sm-4 col-xs-8">
 									<input type="text" id="teamName{{pair.dTeam.rank}}" ng-model = "pair.dTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-4 control-label"> Team ID: </label>
-								<div class="col-sm-4">
+								<div class="col-sm-4 col-xs-8">
 									<input type="text" id="teamID{{pair.dTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 99999" class="form-control" required></input>
 								</div>
 							</div>
