a load of still-broken logic

--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -1,4 +1,7 @@
 <h1 align="center">{{name}} - Enter Round {{round}} Results</h1>
+<p align="center" ng-show = "round == 1">Coin Flip Results: 
+	<select ng-model = "flip1" ng-options="side for side in coinflip" ></select>
+</p>
 	<div id="teamChoicesSummary" ng-init="showTeams()">
 			<table cellspacing="0" cellpadding="0" id="teamRanktable" class="setTeamCard">
 				<colgroup span="2"></colgroup>
