Text edit changes.

--- a/templates/screen1.html
+++ b/templates/screen1.html
@@ -36,7 +36,7 @@
         <div class="container">
 			<div class="col-lg-5 col-sm-6">
 				<h2 class="section-heading">Let us tabulate for you</h2>
-				<p class="lead">TrialTracker is a convenient way to pair teams, adhering to the rules/tabulation manual set by American Mock Trial Association.</p>
+				<p class="lead">TrialTracker is a convenient way to pair teams, adhering to the tabulation manual set by American Mock Trial Association.</p>
 			</div>
 			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 				<img class="img-responsive" src="resources/img/PairingCard.png" alt="">
