--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -1,5 +1,5 @@
 <h1 align="center">{{name}}</h1>
-<h3 align="center">Enter Team Information for Round {{round}} Pairings...</h3>
+<h3 align="center">Enter Team Information for Round {{round}} Pairings:</h3>
 	<div id="enterTeams" ng-init = "configTeams()" class="cardTableTop">
 		<form name="teamCards">
 			<table cellspacing="0" cellpadding="0" id="teamSetUpTable" class="setTeamCard">
