Text edit changes to screen 2

--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -10,7 +10,7 @@
 			<div class="form-group">
 				<label for="TournamentName" class="col-sm-5"> Tournament Name </label>
 				<div class="col-sm-4 col-xs-9">
-					<input type="text" class="form-control " id="tourName" placeholder="ex. Party Like a Mock Star 2090" size="50" ng-model="text" required />
+					<input type="text" class="form-control " id="tourName" placeholder="ex. Macalester Trials" size="50" ng-model="text" required />
 				</div>
 			</div>
 			<div class="form-group">
