--- a/templates/screen5.html
+++ b/templates/screen5.html
@@ -1,6 +1,6 @@
 <h1 align="center">{{name}} - Round {{round}} Pairings</h1>
-<p>Swap list: {{swapList}}</p>
-<p align="center" ng-show = "round == 3">Coin Flip: Tab Director must flip the team sides if tails.
+<p align="center">Swap list: {{swapList}}</p>
+<p align="center" ng-show = "round == 3">Coin flip results: Tab Director must flip the sides if the coin comes up tails.
 	<input type="button" class="btn btn-default" value="Flip Team Sides" ng-click ="FlipSides()">
 </p>
 	<div ng-init="pairTeams()">
