new things with swapList rnd 2

--- a/templates/screen5.html
+++ b/templates/screen5.html
@@ -45,7 +45,7 @@
 					</tr>
 				</tbody>
 			</table>
-		<input type="button" class="btn btn-default" value="Enter Round {{round}} Results" ui-sref="screen4" id="startR_button">	
+		<input type="button" class="btn btn-default" ng-click = "saveSwaps()" value="Enter Round {{round}} Results" ui-sref="screen4" id="startR_button">	
 		<br></br>
 	</div>
 	
