Attempting to implement a screen7 that tells users how to use our website.....

--- a/templates/screen1.html
+++ b/templates/screen1.html
@@ -10,6 +10,9 @@
 			<li>
 				<a ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
 			</li>
+			<li>
+				<a ui-sref="screen7" class="btn btn-default btn-lg"><span class="network-name">Learn How To Use TrialTracker</span></a>
+			</li>
 		</ul>
     </div>
 	
