--- a/templates/screen7.html
+++ b/templates/screen7.html
@@ -1,4 +1,4 @@
-    <div class="content-section-a">
+    <div class="content-section-b">
         <div class="container">
 			<div class="col-lg-5 col-sm-6">
 				<h2 class="section-heading">Step 1: </h2>
@@ -8,6 +8,23 @@
 			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 				<img class="img-responsive" src="resources/img/HTscreen1.png" alt="">
 			</div>
+        </div>
+        <!-- /.container -->
+    </div>
+	
+	<div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Step 2: </h2>
+                    <p class="lead">Enter all team names and team IDs in the form fields indicated by the arrows. Afterwards, hit the submit button. </p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="resources/img/HTscreen2" alt="">
+                </div>
+            </div>
         </div>
         <!-- /.container -->
     </div>
