Added written instructions for step 3, changed look of forms, added images that are too big right now

--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -15,8 +15,7 @@
 						<td>
 							<!--<form id="resultsFormp" class="teamCard">-->
 								<div id="teamCardFormP"  class="teamCard form-horizontal">
-									<b>Team Name:</b> {{pair.pTeam.name}} <br>
-									<b>Team Number:</b> {{pair.pTeam.uniqueID}} <br>
+									<h4 style="text-align:center">{{pair.pTeam.name}} - {{pair.pTeam.uniqueID}} </h4> 
 									<b>Team Record:</b> {{pair.pTeam.record + pair.pTeam.tempRecord}} <br>
 									<b>Team CS:</b> {{pair.pTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.pTeam.pointDiff + pair.pTeam.temp1 + pair.pTeam.temp2}} <br>
@@ -31,8 +30,7 @@
 						<td>
 							<!--<form id="resultsFormd" class="teamCard">-->
 								<div id="teamCardFormD" class="teamCard form-horizontal">
-									<b>Team Name:</b> {{pair.dTeam.name}} <br>
-									<b>Team Number:</b> {{pair.dTeam.uniqueID}} <br>
+									<h4 style="text-align:center"> {{pair.dTeam.name}} - {{pair.dTeam.uniqueID}} </h4> 
 									<b>Team Record:</b> {{pair.dTeam.record + pair.dTeam.tempRecord}} <br>
 									<b>Team CS:</b> {{pair.dTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.dTeam.pointDiff + pair.dTeam.temp1 + pair.dTeam.temp2}} <br>
