--- a/resources/trialtracker.css
+++ b/resources/trialtracker.css
@@ -129,6 +129,11 @@ input[type="button"]{
 	margin: 0 auto; 
 }
 
+a[type="button"]{
+	display: block;
+	margin: 0 auto; 
+}
+
 form.setUpCard{ 
 	margin: 0 auto;
 }
