--- a/templates/screen5.html
+++ b/templates/screen5.html
@@ -15,8 +15,7 @@
 						<td >
 							<form class="teamCard">
 								<div id="teamCard" >
-									<b>Team Name:</b> {{pair.pTeam.name}} <br>
-									<b>Team Number:</b> {{pair.pTeam.uniqueID}} <br>
+									<h4 style="text-align:center"> {{pair.pTeam.name}} - {{pair.pTeam.uniqueID}} </h4>
 									<b>Team Record:</b> {{pair.pTeam.record}} <br>
 									<b>Team CS:</b> {{pair.pTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.pTeam.pointDiff}} <br>
@@ -26,8 +25,7 @@
 						<td >
 							<form class="teamCard">
 								<div id="teamCard" >
-									<b>Team Name:</b> {{pair.dTeam.name}} <br>
-									<b>Team Number:</b> {{pair.dTeam.uniqueID}} <br>
+									<h4 style="text-align:center">{{pair.dTeam.name}} - {{pair.dTeam.uniqueID}} </h4>
 									<b>Team Record:</b> {{pair.dTeam.record}} <br>
 									<b>Team CS:</b> {{pair.dTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.dTeam.pointDiff}} <br>
