--- a/templates/screen7.html
+++ b/templates/screen7.html
@@ -2,8 +2,8 @@
         <div class="container">
 			<div class="col-lg-5 col-sm-6">
 				<h2 class="section-heading">Step 1: </h2>
-				<p class="lead">Enter your tournament name and the number of teams at your tournament in the form fields indicated by the arrows. Afterwards, hit the submit button. 
-				You will not be able to access the next step until all form fields are filled out. </p>
+				<p class="lead">Enter your tournament name and the number of teams at your tournament in the form fields indicated by the arrows. 
+				Afterwards, hit the submit button. You will not be able to access the next step until all form fields are filled out. </p>
 			</div>
 			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 				<img class="img-responsive" src="resources/img/HTscreen1.png" alt="">
@@ -28,3 +28,38 @@
         </div>
         <!-- /.container -->
     </div>
+
+	 <div class="content-section-b">
+        <div class="container">
+			<div class="col-lg-5 col-sm-6">
+				<h2 class="section-heading">Step 3: </h2>
+				<p class="lead">Determine the number of ballots won that round using the drop-down menu. Enter the ballot results. 
+				After clicking the button, you will then be taken to a page with the next rounds' pairings. If a pairing is impermissible, hit the swap button that appears.</p>
+			</div>
+			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+				<img class="img-responsive" src="resources/img/HTscreen1.png" alt="">
+			</div>
+        </div>
+        <!-- /.container -->
+    </div>
+	
+		<div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Step 4: </h2>
+                    <p class="lead"> Repeat step 3 for all remaining rounds. After the fourth round, you will be redirected to the final results of the tournament.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="resources/img/HTscreen2" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+	
+	<div>
+		<a type="button" ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
+	</div>
